--- a/i18n/en.json
+++ b/i18n/en.json
@@ -16,14 +16,14 @@
 		]
 	},
 	"cite-desc": "Adds <code>&lt;ref&gt;</code> and <code>&lt;references&gt;</code> tags for citations",
-	"cite_error": "Cite error: $1",
+	"cite_error": "Reference error: $1",
 	"cite_error_ref_invalid_dir": "Invalid <code>dir=\"$1\"</code>, must be <code>ltr</code> or <code>rtl</code>",
 	"cite_error_ref_numeric_key": "Invalid <code>&lt;ref&gt;</code> tag; name cannot be a simple integer. Use a descriptive title",
 	"cite_error_ref_no_key": "The opening <code>&lt;ref&gt;</code> tag is malformed or has a bad name",
 	"cite_error_ref_too_many_keys": "Invalid <code>&lt;ref&gt;</code> tag; invalid names, e.g. too many",
 	"cite_error_ref_nested_extends": "Extending <code>&lt;ref&gt;</code> tags more than one level deep is not allowed",
 	"cite_error_ref_no_input": "Invalid <code>&lt;ref&gt;</code> tag; refs with no name must have content",
-	"cite_error_references_duplicate_key": "Invalid <code>&lt;ref&gt;</code> tag; name \"$1\" defined multiple times with different content",
+	"cite_error_references_duplicate_key": "Invalid numbering and assignation: name \"$1\" is used for multiple notes with different non empty contents",
 	"cite_error_references_invalid_parameters": "Invalid parameter in <code>&lt;references&gt;</code> tag",
 	"cite_error_references_no_backlink_label": "Ran out of custom backlink labels. Define more in the [[MediaWiki:Cite references link many format backlink labels]] message.",
 	"cite_error_no_link_label_group": "Ran out of custom link labels for group \"$1\". Define more in the [[MediaWiki:$2]] message.",
